<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">断轨监视</string>
    <string name="home">主页</string>
    <string name="command">指令</string>
    <string name="history">历史</string>
    <string name="data">数据</string>
    <string name="description">图片</string>
    <string name="connect">连接</string>
    <string name="edit">编辑</string>
    <string name="save">保存</string>
    <string name="neighbourSmall">相邻小终端</string>
    <string name="terminalNo">终端号</string>
    <string name="neighbourBig">相邻大终端</string>
    <string name="is4G">是否4G</string>
    <string name="isEnd">是否最终点</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="add">+</string>
    <string name="delete">-</string>
    <string name="rails">铁轨</string>
    <string name="upload">上传</string>
    <string name="download">下载</string>
    <string name="clear">清空</string>
    <string name="fix">固定</string>
    <string name="ConfigInitialInfo">初始信息配置</string>
    <string name="ReadPointInfo">读取单点配置信息</string>
    <string name="GetPointRailInfo">获取单点铁轨信息</string>
    <string name="GetHistory">获取历史</string>
    <string name="zero">0</string>
    <string name="title_activity_popwindow_on_left">弹出窗口</string>
    <string name="hello_world">Hello world!</string>
    <string name="pop_left">弹出左侧菜单</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="subscribe">订阅所有铁轨信息</string>
    <string name="unsubscribe">取消订阅所有铁轨信息</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="inputPwd">请输入密码</string>
    <string name="configInitInfo">初始信息配置</string>
    <string name="NeighbourSmallSecondary">次级相邻小终端</string>
    <string name="NeighbourBigSecondary">次级相邻大终端</string>
    <string name="ThisTerminal">本终端</string>
    <string name="inputDateAndTime">请选择起始时间和结束时间</string>
    <string name="inputDateStart">选择起始日期</string>
    <string name="inputDateEnd">选择结束日期</string>
    <string name="inputTimeStart">选择起始时间</string>
    <string name="inputTimeEnd">选择结束时间</string>
    <string name="PointConfigInfo">单点配置信息</string>
    <string name="flashValidOrNot">Flash是否有效</string>
    <string name="ToNow">到现在</string>
    <string name="Temperature">温度</string>
    <string name="Rail1ThisAmplitude">轨1本\n端幅值</string>
    <string name="Rail2ThisAmplitude">轨2本\n端幅值</string>
    <string name="Rail1Stress">轨1\n应力</string>
    <string name="Rail2Stress">轨2\n应力</string>
    <string name="Rail1LeftSignalAmplitude">轨1左\n信号\n幅值</string>
    <string name="Rail1RightSignalAmplitude">轨1右\n信号\n幅值</string>
    <string name="Rail2LeftSignalAmplitude">轨2左\n信号\n幅值</string>
    <string name="Rail2RightSignalAmplitude">轨2右\n信号\n幅值</string>
    <string name="strRail1ThisAmplitude">轨1本端幅值</string>
    <string name="strRail2ThisAmplitude">轨2本端幅值</string>
    <string name="strRail1Stress">轨1应力</string>
    <string name="strRail2Stress">轨2应力</string>
    <string name="strRail1LeftSignalAmplitude">轨1左信号幅值</string>
    <string name="strRail1RightSignalAmplitude">轨1右信号幅值</string>
    <string name="strRail2LeftSignalAmplitude">轨2左信号幅值</string>
    <string name="strRail2RightSignalAmplitude">轨2右信号幅值</string>
    <string name="test">测试</string>

</resources>