<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="400dp"
    android:background="@android:color/darker_gray"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/inputDateAndTime" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="4" >

        <TextView
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:text="@string/inputDateStart" />

        <TextView
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:text="@string/inputTimeStart" />

        <TextView
            android:id="@+id/tvDateStart"
            android:layout_height="30dp"
            android:layout_gravity="fill"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvTimeStart"
            android:layout_height="30dp"
            android:layout_gravity="fill"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center" />

        <TextView
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:text="@string/inputDateEnd" />

        <TextView
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:text="@string/inputTimeEnd" />

        <TextView
            android:id="@+id/tvDateEnd"
            android:layout_height="30dp"
            android:layout_gravity="fill"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvTimeEnd"
            android:layout_height="30dp"
            android:layout_gravity="fill"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:background="@color/white"
            android:clickable="true"
            android:gravity="center" />
    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnOK"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/button_background"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>