<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:title="http://schemas.android.com/apk/res/com.terrytec.brokenrailmonitor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.terrytec.brokenrailmonitor.CustomTitleBar
        android:id="@+id/ctbHomeTitle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        title:left_button_text="@string/connect"
        title:left_button_text_color="@color/white"
        title:left_button_visible="true"
        title:right_button_text="@string/edit"
        title:right_button_text_color="@color/white"
        title:right_button_visible="true"
        title:title_background_color="@color/systemcolor"
        title:title_text="@string/home"
        title:title_text_color="@color/white" >
    </com.terrytec.brokenrailmonitor.CustomTitleBar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/llFunctionButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvClientID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/client_id_background"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" >
            </TextView>

            <Button
                android:id="@+id/btnPop"
                android:layout_width="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/right" >
            </Button>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="center" 
            android:layout_centerHorizontal="true"
            android:layout_below="@id/llFunctionButtons">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_background"
                    android:text="@string/upload"
                    android:visibility="invisible" >
                </Button>

                <LinearLayout
                    android:id="@+id/llTerminalAndRailsContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >
                </LinearLayout>

                <Button
                    android:id="@+id/btnDownload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_margin="8dp"
                    android:background="@drawable/button_background"
                    android:text="@string/download"
                    android:visibility="invisible" >
                </Button>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>