<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:title="http://schemas.android.com/apk/res/com.terrytec.brokenrailmonitor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <com.terrytec.brokenrailmonitor.CustomTitleBar
        android:id="@+id/ctbTerminalCmdTitle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        title:left_button_visible="true"
        title:right_button_visible="false"
        title:title_background_color="@color/systemcolor"
        title:title_text_color="@color/white" >
    </com.terrytec.brokenrailmonitor.CustomTitleBar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnConfigInitialInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:text="@string/ConfigInitialInfo"
            android:width="120dp" >
        </Button>

        <Button
            android:id="@+id/btnReadPointInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:text="@string/ReadPointInfo"
            android:width="120dp" >
        </Button>

        <Button
            android:id="@+id/btnGetPointRailInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:text="@string/GetPointRailInfo"
            android:width="120dp" >
        </Button>

        <Button
            android:id="@+id/btnGetHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:text="@string/GetHistory"
            android:width="120dp" >
        </Button>
    </LinearLayout>

</LinearLayout>